recursion.lessons.recursion.koch.HexaKoch.scala.error
HexaKoch:5: error: illegal start of simple expression
	if(levels == 0);
                       ^HexaKoch:7: error: ';' expected but 'else' found.
	else {
        ^